feat: list user: - add list user - bugfix login
